feat: permitir que atendente visualize histórico de solicitações
Implementa funcionalidade que permite ao atendente visualizar o histórico completo de solicitações de serviço feitas pelos clientes, mesmo quando estes não estão logados no aplicativo.

- Adiciona endpoint GET /api/solicitacoes no backend para recuperar todas as solicitações.
- Cria o componente painel-atendente.html que consome o endpoint e exibe as solicitações.
- Integração com WebSocket para atualizações em tempo real de novas solicitações.
- Implementa autenticação via token JWT para acesso seguro ao endpoint.
- Adiciona botão no painel do atendente para ocultar solicitações específicas da visualização.

Esta funcionalidade melhora a eficiência do atendente ao fornecer acesso contínuo ao histórico de solicitações, independentemente do status de login do cliente.